--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-google-maps/api": "^2.19.3",
+    "@react-icons/all-files": "^4.1.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "query-string": "^9.0.0",
     "react": "^18",
+    "react-datepicker": "^6.5.0",
     "react-dom": "^18",
+    "react-google-places-autocomplete": "^4.0.1",
+    "svix": "^1.21.0",
+    "swiper": "^11.1.0",
     "next": "14.2.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
