--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
 NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
 
 
-MONGODB_URI="mongodb+srv://ishfat0001:Wajt
+MONGODB_URI="mongodb+srv://ishfat0001:WajtH6mRws0n2bnq@chauffcluster0.izld1rm.mongodb.net/?retryWrites=true&w=majority&appName=ChauffCluster0"
