updated registration from clerk to nextauth

--- a/.env
+++ b/.env
@@ -1,13 +1,16 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bGVnYWwtaHVtcGJhY2stODUuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_4HlFnRWIhnavjtJP7zXvE0CVsQtGEW3olI7pWsWWOm
+# NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bGVnYWwtaHVtcGJhY2stODUuY2xlcmsuYWNjb3VudHMuZGV2JA
+# CLERK_SECRET_KEY=sk_test_4HlFnRWIhnavjtJP7zXvE0CVsQtGEW3olI7pWsWWOm
 
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+# NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+# NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+# NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+# NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
 NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
 
 
 MONGODB_URI="mongodb+srv://ishfat0001:WajtH6mRws0n2bnq@chauffcluster0.izld1rm.mongodb.net/?retryWrites=true&w=majority&appName=ChauffCluster0"
+
+NEXTAUTH_SECRET=asdfasdfasdfasgdfgdsfsdf
+NEXTAUTH_URL=http://localhost:3000
