--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-icons/all-files": "^4.1.0",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-datepicker": "^6.5.0",
     "react-dom": "^18",
     "react-google-places-autocomplete": "^4.0.1",
-    "swiper": "^11.1.0",
-    "next": "14.2.3"
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
