ready for production build

--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
 MONGODB_URI="mongodb+srv://ishfat0001:WajtH6mRws0n2bnq@chauffcluster0.izld1rm.mongodb.net/?retryWrites=true&w=majority&appName=ChauffCluster0"
 
 NEXTAUTH_SECRET=asdfasdfasdfasgdfgdsfsdf
-NEXTAUTH_URL=https://chauff-app.vercel.app/
+NEXTAUTH_URL=http://localhost:3000/
