--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-icons/all-files": "^4.1.0",
     "bcryptjs": "^2.4.3",
+    "jspdf": "^2.5.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.2.3",
@@ -22,6 +23,7 @@
     "react-datepicker": "^6.5.0",
     "react-dom": "^18",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-transition-group": "^4.4.5",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
