--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
-NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk
+NEXT_PUBLIC_GOOGLE_API_KEY="AIzaSyBQPN2It_7DUDQ7KexhW_C2YdDGXJPBrzk"
 
 
 MONGODB_URI="mongodb+srv://ishfat0001:WajtH6mRws0n2bnq@chauffcluster0.izld1rm.mongodb.net/?retryWrites=true&w=majority&appName=ChauffCluster0"
