--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "jspdf": "^2.5.1",
     "mongodb": "^6.5.0",
