--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-icons/all-files": "^4.1.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "jspdf": "^2.5.1",
@@ -25,9 +27,11 @@
     "react-dom": "^18",
     "react-google-places-autocomplete": "^4.0.1",
     "react-transition-group": "^4.4.5",
+    "stripe": "^16.12.0",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
+    "@types/node": "22.7.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
